src/test/ui/impl-trait/universal-two-impl-traits.stderr
error[E0308]: mismatched types
  --> $DIR/universal-two-impl-traits.rs:15:9
   |
LL |     a = y; //~ ERROR mismatched
   |         ^ expected `impl std::fmt::Debug` parameter, found a different `impl std::fmt::Debug` parameter
   |
   = note: expected type `impl std::fmt::Debug` (`impl std::fmt::Debug` parameter)
              found type `impl std::fmt::Debug` (`impl std::fmt::Debug` parameter)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
